--- a/ship.html
+++ b/ship.html
@@ -516,7 +516,7 @@
 		for (var x in data.skin) {
 			var container = document.createElement('div');
 			container.className = 'btnContainer';			
-			container.setAttribute('onclick','onDialogueSkinNavButtonClick(\'' + "skin" + x + '\')');
+			container.setAttribute('onclick','onDialogueSkinNavButtonClick(\'' + x + '\')');
 			if (firstIteration){
 				container.innerHTML = 
 				//'<img class="btnImage" id="diaNav_' + data.skin[x].id + '" src="' + data.skin[x].icon + '"></img>\
