remove media links in json: skill icons

--- a/ship.html
+++ b/ship.html
@@ -390,7 +390,7 @@
 			text = text + '\
 			<tr>\
 				<td style="text-align:left;padding:10px;white-space: nowrap;">\
-					<img src="'+data.skill[x].skillIcon+'">&emsp;'+data.skill[x].name+'\
+					<img src="'+window.folder+"/Icon/skill"+x+".png"+'">&emsp;'+data.skill[x].name+'\
 				</td>\
 				<td style="text-align:left;padding:10px">'+data.skill[x].description+'</td>\
 				<td style="padding:10px;white-space: nowrap;">'+data.skill[x].requirement+'</td>\
@@ -398,6 +398,8 @@
 		}
 		document.getElementById("shipSkillSet").innerHTML = text;
 	}
+	
+	//<img src="'+data.skill[x].skillIcon+'">&emsp;'+data.skill[x].name+'\
 	
 	function setShipDropEventSelection(data){
 		if (data.drop.droppable == "true"){
