--- a/patchnotes.html
+++ b/patchnotes.html
@@ -52,7 +52,7 @@
 			{       
 				var allText = rawFile.responseText;
 				var converter = new showdown.Converter(),
-				var html = converter.makeHtml(allText);
+				html = converter.makeHtml(allText);
 				document.getElementById("notes").innerHTML = html;
 			}
 			rawFile.send(null);
