--- a/patchnotes.html
+++ b/patchnotes.html
@@ -59,6 +59,7 @@
 	
 		function loadPatchNotes(){
 			loadJSON(function(response) {
+			console.log("test");
 				var actual_JSON = JSON.parse(response);
 				console.log(actual_JSON);
 				
