--- a/ship.html
+++ b/ship.html
@@ -370,17 +370,17 @@
 				</td>\
 			</tr>\
 			<tr style="text-align:center">\
-				<td style="background:#262f3b;height:30px">\
+				<td style="background:#24252d;height:30px">\
 					<b>\
 						<font style="vertical-align: inherit;">Skill Name</font>\
 					</b>\
 				</td>\
-				<td style="background:#262f3b;height:30px">\
+				<td style="background:#24252d;height:30px">\
 					<b>\
 						<font style="vertical-align: inherit;">Description</font>\
 					</b>\
 				</td>\
-				<td style="background:#262f3b;height:30px">\
+				<td style="background:#24252d;height:30px">\
 					<b>\
 						<font style="vertical-align: inherit;white-space: nowrap;padding: 0px 10px 0px 10px;">Unlock Requirements</font>\
 					</b>\
@@ -431,7 +431,7 @@
 			for (var x in actual_JSON.drop.list){
 				if (actual_JSON.drop.list[x].event == selected){
 					var text = 
-					'<tr style="text-align:center;background-color:#262f3b;">\
+					'<tr style="text-align:center;background-color:#24252d;">\
 						<td style="width:1px;padding: 0px 5px 0px 5px;">\
 							<b>Node</b>\
 						</td>';
@@ -457,7 +457,7 @@
 					while (node <= count){
 						text = text + '\
 					<tr style="text-align:center;">\
-						<td style="width:1px;padding: 0px 5px 0px 5px;background-color:#262f3b;">\
+						<td style="width:1px;padding: 0px 5px 0px 5px;background-color:#24252d;">\
 							<b>'+node+'</b>\
 						</td>';
 						for (var y in actual_JSON.drop.list[x].chapter){
@@ -550,7 +550,7 @@
 			// Parse JSON string into object
 			var actual_JSON = JSON.parse(response);
 			var text = '\
-			<tr style="background-color:#262f3b;text-align:center;">\
+			<tr style="background-color:#24252d;text-align:center;">\
 				<td style="width:14%">\
 					<b>Event</b>\
 				</td>\
@@ -954,7 +954,7 @@
 			</td>
 		</tr>
 		<tr>
-			<td colspan="2" style="background:#262f3b;height:30px">
+			<td colspan="2" style="background:#24252d;height:30px">
 				<b>
 					<font style="vertical-align: inherit;">Illustrator</font>
 				</b>
@@ -1039,7 +1039,7 @@
 		<td rowspan="3"style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b;height:30px" id="shipSkinName"></td>
+					<td style="background:#24252d;height:30px" id="shipSkinName"></td>
 				</tr>
 				<tr>
 					<td> 
@@ -1051,7 +1051,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0">
 				<tr>
-					<td style="background:#262f3b;height:30px">
+					<td style="background:#24252d;height:30px">
 						<b>Description</b>
 					</td>
 				</tr>
@@ -1067,7 +1067,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b;height:30px">
+					<td style="background:#24252d;height:30px">
 						<b>SD</b>
 					</td>
 				</tr>
@@ -1084,7 +1084,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b;height:30px">
+					<td style="background:#24252d;height:30px">
 						<b>Expressions</b>
 					</td>
 				</tr>
@@ -1137,7 +1137,7 @@
 		<td style="padding-left:5px" id="shipParameterFirepower"></td>
 	</tr>
 	<tr>
-		<td colspan="2" style="background:#262f3b;height:30px;text-align:center">
+		<td colspan="2" style="background:#24252d;height:30px;text-align:center">
 			<b>
 				<font style="vertical-align: inherit;">Stats</font>
 			</b>
@@ -1230,13 +1230,13 @@
 		<td colspan="4" id="shipLimitBreakT3"></td>
 	</tr>
 	<tr style="text-align:center">
-		<td colspan="5"  style="background:#262f3b;height:30px">
+		<td colspan="5"  style="background:#24252d;height:30px">
 			<b>
 				<font style="vertical-align: inherit;">Equipments</font>
 			</b>
 		</td>
 	</tr> 
-	<tr style="text-align:center;background:#262f3b;vertical-align:top">
+	<tr style="text-align:center;background:#24252d;vertical-align:top">
 		<td>
 			<b>Slot</b>
 		</td>
@@ -1292,7 +1292,7 @@
 		<td id="shipEquipmentLoadoutPreload5"></td>
 	</tr>
 	<tr style="text-align:center">
-		<td colspan="5"  style="background:#262f3b;height:30px">
+		<td colspan="5"  style="background:#24252d;height:30px">
 			<b>
 				<font style="vertical-align: inherit;">Default Equipments</font>
 			</b>
@@ -1322,17 +1322,17 @@
 		</td>
 	</tr>
 	<tr style="text-align:center">
-		<td style="background:#262f3b;height:30px">
+		<td style="background:#24252d;height:30px">
 			<b>
 				<font style="vertical-align: inherit;">Skill Name</font>
 			</b>
 		</td>
-		<td style="background:#262f3b;height:30px">
+		<td style="background:#24252d;height:30px">
 			<b>
 				<font style="vertical-align: inherit;">Description</font>
 			</b>
 		</td>
-		<td style="background:#262f3b;height:30px">
+		<td style="background:#24252d;height:30px">
 			<b>
 				<font style="vertical-align: inherit;">Unlock Requirements</font>
 			</b>
@@ -1370,7 +1370,7 @@
 	<tr>
 		<td style="width:30%;height:1px;" rowspan="2">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
-				<tr style="text-align:center;background-color:#262f3b;">
+				<tr style="text-align:center;background-color:#24252d;">
 					<td style="width:40%;padding-left:10px;text-align:left;" id="shipConstructionBuildTime"></td>
 					<td style="width:20%">
 						<b>JP</b>
@@ -1383,7 +1383,7 @@
 					</td>
 				</tr>
 				<tr style="text-align:center;">
-					<td style="padding-left:10px;background-color:#262f3b;text-align:left;">
+					<td style="padding-left:10px;background-color:#24252d;text-align:left;">
 						<b>Light</b>
 					</td>
 					<td id="shipLightBuildJP"></td>
@@ -1391,7 +1391,7 @@
 					<td id="shipLightBuildEN"></td>
 				</tr>
 				<tr style="text-align:center;">
-					<td style="padding-left:10px;background-color:#262f3b;text-align:left;">
+					<td style="padding-left:10px;background-color:#24252d;text-align:left;">
 						<b>Heavy</b>
 					</td>
 					<td id="shipHeavyBuildJP"></td>
@@ -1399,7 +1399,7 @@
 					<td id="shipHeavyBuildEN"></td>
 				</tr>
 				<tr style="text-align:center;">
-					<td style="padding-left:10px;background-color:#262f3b;text-align:left;">
+					<td style="padding-left:10px;background-color:#24252d;text-align:left;">
 						<b>Special</b>
 					</td>
 					<td id="shipSpecialBuildJP"></td>
@@ -1407,7 +1407,7 @@
 					<td id="shipSpecialBuildEN"></td>
 				</tr>
 				<tr style="text-align:center;">
-					<td style="padding-left:10px;background-color:#262f3b;text-align:left;">
+					<td style="padding-left:10px;background-color:#24252d;text-align:left;">
 						<b>Limited</b>
 					</td>
 					<td id="shipLimitedBuildJP"></td>
@@ -1417,7 +1417,7 @@
 			</table>
 		</td>
 		<td style="min-width:70%;padding:5px 10px 5px 10px;height:1px;text-align:left;">
-			<select class="form-control" id="shipDropEventSelection" style="width:250px;background-color:#262f3b;color:#ffffff;float:left;" onchange="onSelectShipDropEventSelection()">
+			<select class="form-control" id="shipDropEventSelection" style="width:250px;background-color:#24252d;color:#ffffff;float:left;" onchange="onSelectShipDropEventSelection()">
 
 			</select>&emsp;<font id="shipDropEventSelectionTitle">test</font>
 		</td>
@@ -1426,7 +1426,7 @@
 		<td style="vertical-align:top;text-align:left;width:70%;">	
 			<div style="overflow-x:auto;width:100%;">
 			<table class="wikitablewide" style="height:100%;text-align:left;margin:0 0 0 0;" id="shipDropTable">
-				<!--<tr style="text-align:center;background-color:#262f3b;">
+				<!--<tr style="text-align:center;background-color:#24252d;">
 					<td style="width:1px;padding: 0px 5px 0px 5px;">
 						<b>Node</b>
 					</td>
@@ -1441,7 +1441,7 @@
 					</td>					
 				</tr>
 				<tr style="text-align:center;">
-					<td style="width:1px;padding: 0px 5px 0px 5px;background-color:#262f3b;">
+					<td style="width:1px;padding: 0px 5px 0px 5px;background-color:#24252d;">
 						<b>Node</b>
 					</td>
 					<td style="min-width:55px"></td>
@@ -1477,7 +1477,7 @@
 	<tr>
 		<td style="width:30%;height:1px;">
 			<table class="wikitablewide" id="shipDialogueTable" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;table-layout:fixed;">
-				<tr style="background-color:#262f3b;text-align:center;">
+				<tr style="background-color:#24252d;text-align:center;">
 					<td style="width:14%">
 						<b>Event</b>
 					</td>
