--- a/shiplist.html
+++ b/shiplist.html
@@ -213,7 +213,7 @@
 <!-- content -->
 
 <table class="wikitablewide" style="width:100%">
-	<tr style="text-align:center;background-color:#262f3b;">				
+	<tr style="text-align:center;background-color:#24252d;">				
 		<td>
 			Ships
 		</td>
