--- a/patchnotes.html
+++ b/patchnotes.html
@@ -77,7 +77,9 @@
 			});
 		}
 		
-	
+		window.onhashchange = function() {
+			window.location.reload();
+		}
 		window.onload = function() {
 		  loadPatchNotes();
 		};
