--- a/shiplist.html
+++ b/shiplist.html
@@ -118,6 +118,9 @@
 					} else if (actual_JSON[x].rarity == "Elite"){
 						text = text + '\
 						<div class="imgdiv" style="background-color:#b080b0">';
+					} else if (actual_JSON[x].rarity == "Rare"){
+						text = text + '\
+						<div class="imgdiv" style="background-color:#8cb3b8">';
 					}
 					text = text + '\
 							<a href="ship#'+actual_JSON[x].link+'"><img src="'+actual_JSON[x].icon+'"></a>\
