--- a/story.html
+++ b/story.html
@@ -43,6 +43,10 @@
                     <a href="">Equipment</a>
                     
                 </li>
+				<li class="active">
+                    <a href="">Story</a>
+                    
+                </li>
             </ul>
 			
 			<div class="sidebar-subheader">
