--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                     <a href="">Equipment</a>
                     
                 </li>
+				<li>
+                    <a href="story">Story</a>
+                    
+                </li>
             </ul>
 			
 			<div class="sidebar-subheader">
