--- a/story.html
+++ b/story.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css\mainstyle.css">
+    <link rel="stylesheet" href="css\story.css">
 	<!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
@@ -97,6 +98,56 @@
                     </div>
                 </div>
             </nav>
+
+        <!-- Content -->
+        <!-- Content -->
+        <!-- Content -->
+
+        <table class="wikitablewide" style="width:100%;text-align:center">
+            <tr>
+                <td style="background:#24252d;font-size:24px;text-align: left;padding: 10px 20px" id="storyTitle">Visitors Dyed in Red</td>
+            </tr>
+            <tr>
+                <td style="padding: 20px;text-align: left" id="storyDesc">Sample Description</td>
+            </tr>
+            <tr>
+                <td style="text-align: left" id="storyNav">
+                    <div class="btnGeneric">
+                        <div class="btnGenericText">Chapter 1</div>
+                    </div>                    
+                </td>
+            </tr>
+            <tr>
+                <td style="height: 1px;">
+                    <table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;table-layout: fixed;">
+                        <tr style="background:#24252d;height: 30px;text-align: center;" >
+                            <td style="width: 20%">Character</td>
+                            <td style="width: 80%">Chinese
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td style="text-align: left" id="storyNav">
+                                <div class="btnGeneric">
+                                    <div class="btnGenericText">Chapter 1</div>
+                                </div>                    
+                            </td>
+                        </tr>
+                        <tr>
+                            <td style="padding: 20px;text-align: center;"><img src="https://i.imgur.com/XKjH12i.png"><br>Essex</td>
+                            <td style="padding: 20px">Test dialogue</td>
+                        </tr>
+                        <tr>
+                            <td colspan="2" style="padding: 20px;text-align: center;"><img src="https://i.imgur.com/Wck9lRh.jpg"><br>test</td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+
+
+        <!-- Content -->
+        <!-- Content -->
+        <!-- Content -->
 			
 		</div>
     </div>
@@ -126,7 +177,7 @@
     
 <footer id="footer">
 Azur Lane © is owned by Shanghai Manjuu, Xiamen Yongshi, Shanghai Yostar | All logos and trademarks are property of their respective owners.<br>
-Special thanks to /alg/, English Koumakan Wiki, Chinese Wikis, Japanese Wikis, and to all our contributors. /alg/ wiki © 2019. This is a non-profit website. 
+Special thanks to /alg/, English Koumakan Wiki, <a href="http://wiki.joyme.com/blhx/">碧蓝航线wiki</a>, Japanese Wikis, and to all our contributors. /alg/ wiki © 2019. This is a non-profit website. 
 </footer>
 
 </body>
