--- a/story.html
+++ b/story.html
@@ -119,7 +119,7 @@
                 <tr>';
                     if (dialogue.icon_file == ""){
                         text = text + '\
-                    <td style="padding: 20px;text-align: center;"><img style="height:64px;width:64px;" src=""><br>'+dialogue.name+'</td>';
+                    <td style="padding: 20px;text-align: center;">'+dialogue.name+'</td>';
                     } else {
                         text = text + '\
                     <td style="padding: 20px;text-align: center;"><a href="ship#'+shiplink+'"><img style="height:64px;width:64px;" src="'+icon+dialogue.icon_file+'.png"><br>'+dialogue.name+'</a></td>';
@@ -264,7 +264,7 @@
                     
                 </li>
 				<li class="active">
-                    <a href="">Story</a>
+                    <a href="storylist">Story</a>
                     
                 </li>
             </ul>
