Initial commit to branch components

--- a/story.html
+++ b/story.html
@@ -405,7 +405,7 @@
     
 <footer id="footer">
 Azur Lane © is owned by Shanghai Manjuu, Xiamen Yongshi, Shanghai Yostar | All logos and trademarks are property of their respective owners.<br>
-Special thanks to /alg/, English Koumakan Wiki, <a href="http://wiki.joyme.com/blhx/">碧蓝航线wiki</a>, Japanese Wikis, and to all our contributors. /alg/ wiki © 2019. This is a non-profit website. 
+Special thanks to /alg/, <a href="https://azurlane.koumakan.jp">English Koumakan Wiki</a>, <a href="http://wiki.joyme.com/blhx/">碧蓝航线wiki</a>, <a href="http://azurlane.wikiru.jp/">azurlane.wikiru.jp</a>, and to all our contributors. /alg/ wiki © 2019. This is a non-profit website. 
 </footer>
 
 </body>
