fast-forwarded to master

--- a/storylist.html
+++ b/storylist.html
@@ -114,6 +114,9 @@
                 </tr>
             </table>
 
+            <table class="wikitablewide" style="width:100%">
+            </table>
+
 		</div>
     </div>
 
